Fix code background not visible on dark mode in text editor

--- a/src/css/richer-text.css
+++ b/src/css/richer-text.css
@@ -72,7 +72,7 @@
 
   /* Editor wrapper */
   --border-color: #374151;
-  --background-color: #0a0a0a;
+  --background-color: #171717;
   --text-color: #f5f5f5;
 
   /* Editor toolbar */
